refactor: move away from Springboot (#36)
Signed-off-by: Santhosh <santho7hbali@gmail.com>